--- a/build.xml
+++ b/build.xml
@@ -111,8 +111,10 @@
 		</copy>
 	</target>
 
-	<target name="execute.HPWriter">
-		<echo message="Executing Health Profile Writer: will produce a people.xml in home folder" />
+	
+
+	<target name="execute.evaluation">
+		<echo message="#############################Creating XML File with the Persons and marshaling into XML###############################" />
 		<java classname="HealthProfileWriter" classpath="${build.dir}">
 			<classpath>
 				<fileset dir="${lib.dir}">
@@ -121,77 +123,25 @@
 				</fileset>
 			</classpath>
 		</java>
-	</target>
 
-	<target name="execute.HPReader">
-		<echo message="Executing Health Profile Reader: will read the people.xml in home folder and print one at a time" />
-		<java classname="HealthProfileReader" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
-	</target>
+        <echo message="#############################Executing Requested readings on the files from un-marshaling the previous XML ###############################" />
+        <java classname="HealthProfileReader" classpath="${build.dir}">
+            <classpath>
+                <fileset dir="${lib.dir}">
+                    <include name="**/*.jar" />
+                    <include name="*.jar" />
+                </fileset>
+            </classpath>
+        </java>
 
-	<target name="execute.JavaToXML">
-		<echo message="Executing JavaToXML" />
-		<java classname="bookstore.JavaToXML" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
-	</target>
-
-	<target name="execute.JAXBMarshaller">
-		<echo message="Executing JAXBMarshaller" />
-		<java classname="bookstore.JAXBMarshaller" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
-	</target>
-
-	<target name="execute.JAXBUnMarshaller">
-		<echo message="Executing JAXBUnMarshaller" />
-		<java classname="bookstore.JAXBUnMarshaller" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
-	</target>
-
-	<target name="execute.dozerExample">
-		<echo message="Executing Dozer Example" />
-		<java classname="dozerproject.DozerMapperTest" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
-	</target>
-
-	<target name="execute.HPJson">
-		<echo message="Executing Health Profile Writer for Json" />
-		<java classname="HealthProfileJson" classpath="${build.dir}">
-			<classpath>
-				<fileset dir="${lib.dir}">
-					<include name="**/*.jar" />
-					<include name="*.jar" />
-				</fileset>
-			</classpath>
-		</java>
+        <echo message="#############################Printing Users into a JSon file ###############################" />
+        <java classname="HealthProfileJson" classpath="${build.dir}">
+            <classpath>
+                <fileset dir="${lib.dir}">
+                    <include name="**/*.jar" />
+                    <include name="*.jar" />
+                </fileset>
+            </classpath>
+        </java>
 	</target>
 </project>
